{
  "version": 4,
  "terraform_version": "1.10.5",
  "serial": 14,
  "lineage": "5a67c0e8-4d6b-33d4-2b8b-3a5fc54e0ce5",
  "resources": [
    {
      "mode": "data",
      "type": "aws_security_group",
      "name": "selected",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905418001523:security-group/sg-0ec37eff30004a6c8",
            "description": "Custom security group for SSH and HTTP access",
            "filter": null,
            "id": "sg-0ec37eff30004a6c8",
            "name": "sg_gmadan",
            "tags": {
              "Name": "sg_gmadan"
            },
            "timeouts": null,
            "vpc_id": "vpc-04a32ec2fa7930422"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "managednode",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-053a45fff0a704a47",
            "arn": "arn:aws:ec2:us-east-1:905418001523:instance/i-0f330cbc5b57bd659",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f330cbc5b57bd659",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "manaednodekey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-03047213960cadff8",
            "private_dns": "ip-172-31-82-73.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.82.73",
            "public_dns": "ec2-54-165-224-70.compute-1.amazonaws.com",
            "public_ip": "54.165.224.70",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0116d078cc57cef13",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg_gmadan"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0bc4fe5b6fb15eb69",
            "tags": {
              "Name": "Managednode"
            },
            "tags_all": {
              "Name": "Managednode"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ec37eff30004a6c8"
            ]
          },
          "dependencies": [
            "data.aws_security_group.selected"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "my_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905418001523:security-group/sg-0ec37eff30004a6c8",
            "description": "Custom security group for SSH and HTTP access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ec37eff30004a6c8",
            "ingress": [
              {
                "cidr_blocks": [
                  "172.20.10.2/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "sg_gmadan",
            "name_prefix": "",
            "owner_id": "905418001523",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sg_gmadan"
            },
            "tags_all": {
              "Name": "sg_gmadan"
            },
            "timeouts": null,
            "vpc_id": "vpc-04a32ec2fa7930422"
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}